apps/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
  - name: http
    targetPort: 3000
    port: 3000
