apps/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations: 
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.lab.emc2.build`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: default-headers
          namespace: default
  # tls:
  #   # This must match the certificate secretName!
  #   secretName: lab-emc2-build-tls
